# uploadpy

./: .dockerignore  .gitignore  Dockerfile  docker-compose.example.yaml  pyproject.toml  shell.nix  start.py
.github/workflows/: docker.yaml
uploadpy/: __init__.py  uploadpy.py  utils.py  yt.py  ytapi.py  ytbrowser.py
