[tool.poetry]
name = "uploadpy"
version = "0.1.0"
description = "Automatically upload YouTube videos"
authors = ["Felix Breuer <fbreuer@pm.me>"]

[tool.poetry.scripts]
uploadpy = "uploadpy.uploadpy:cli"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
path = "^15.1.2"

# 4.x yields geckodriver error code 64
selenium = "3.*"
opplast = "1.0.11"

# youtube api
google-api-python-client = "^2.26.1"
google-auth = "^2.3.0"
google-auth-oauthlib = "^0.4.6"
google-auth-httplib2 = "^0.1.0"
Flask = "^2.0.2"
Werkzeug = "^2.0.2"
eventlet = "^0.33.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
